--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
     <h1 class="blog-title">{{ site.title }}</h1>
     <h2 class="blog-description">{{ site.description }}</h2>
     <div class="custom-links">
-      {% for social in site.social %}
+      {% comment %}{% for social in site.social %}
         {% if social.url %}
             <a class="icon-{{ social.icon }}" href="{{ social.url }}" {% if social.desc %} title="{{ social.desc }}"{% endif %}">
               <i class="fa fa-{{ social.icon }}"></i>
@@ -23,7 +23,11 @@ layout: default
             &nbsp;&nbsp;·&nbsp;&nbsp;
         {% endif %}
       {% endfor %}
-      <a href={{ "/about/" | prepend: site.baseurl }}>About</a>
+      {% endcomment %}
+      <a href={{ "/about/" | prepend: site.baseurl }}>ABOUT</a> | 
+      <a href={{ "#" | prepend: site.baseurl }}>EVENTS</a> | 
+      <a href={{ "#" | prepend: site.baseurl }}>PROGRAMS</a> | 
+      <a href={{ "#" | prepend: site.baseurl }}>PROJECTS</a>
     </div>
 </header>
 
@@ -31,7 +35,7 @@ layout: default
 <main class="content" role="main">
 
     {% if site.tags.featured %}
-    <h5 class="index-headline featured"><span>Featured</span></h5>
+    <h5 class="index-headline featured"><span>News</span></h5>
 
     <div class="container featured">
       {% for post in site.tags.featured %}
