added programs page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
     |
     <a href={{ "#" | prepend: site.baseurl }}>EVENTS</a>
     |
-    <a href={{ "#" | prepend: site.baseurl }}>PROGRAMS</a>
+    <a href={{ "/programs/" | prepend: site.baseurl }}>PROGRAMS</a>
     |
     <a href={{ "#" | prepend: site.baseurl }}>PROJECTS</a>
   </div>
